# cjs-module-lexer

./: .gitignore  Cargo.toml  README.md
benches/: parser.rs
cjs_module_lexer/: Cargo.toml
cjs_module_lexer/benches/: parser.rs
cjs_module_lexer/src/: main.rs  parser.rs  utils.rs
cjs_module_lexer/tests/: parser.rs
cjs_module_lexer/tests/fixtures/: angular.js  react-dom.js  rollup-slice2.js
cjs_module_lexer_wasm/: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
cjs_module_lexer_wasm/scripts/: build.js
cjs_module_lexer_wasm/src/: index.ts  lib.rs
examples/: run_inline.js  run_node.js
examples/nodejs/: import-in-cjs.cjs
examples/npm/: example.js  package.json
examples/web/: index.html
src/: lib.rs  parser.rs  utils.rs
tests/: match_express_keyword.rs  parser.rs
tests/fixtures/: react-dom.development.js  rollup-slice1.js
