[package]
name = "cjs_module_lexer_wasm"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cjs_module_lexer = { path = "../cjs_module_lexer" }
wasm-bindgen = { version = "0.2.74" }
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4.5"

[profile.release]
panic = "abort"
lto = true
